# catrr

./: .pylintrc  Makefile  README.md  pyproject.toml
src/catrr/: __init__.py  cli.py
tests/: __init__.py  __main__.py  runtests.py  test_cli.py  test_rr.py  test_statefulrr.py  test_storage.py
