[project]
name = "catrr"
version = "0.1.0"
description = "cat files in a round-robin fashion"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
